--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -1,16 +1,19 @@
 version: "3.8"
+
 services:
   postgres:
     image: postgres:15.7
+    container_name: db
     ports:
       - "5432:5432"
-    container_name: poc-be-db
-    volumes:
-      - db:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: cit-web-db
+      POSTGRES_DB: db
+    volumes:
+      - db:/var/lib/postgresql/data
+    networks:
+      - backend
 
 volumes:
   db:
