--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "turbo": "^2.3.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "name": "next-directus-express-template",
   "packageManager": "npm@10.2.3",
