feature: ensure backend connection is correct and create setup-env script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "turbo run test",
     "typecheck": "turbo run typecheck",
     "docker:up": "docker-compose -f docker-compose.central.yml up",
-    "docker:down": "docker-compose -f docker-compose.central.yml down"
+    "docker:down": "docker-compose -f docker-compose.central.yml down",
+    "setup-env": "node ./setup-env.js apps/api/.env.sample apps/api/.env"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
