--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "typecheck": "turbo run typecheck",
-    "docker:up": "docker-compose -f docker-compose.central.yml up",
-    "docker:down": "docker-compose -f docker-compose.central.yml down",
+    "docker:up": "docker-compose -f docker-compose.yml up",
+    "docker:down": "docker-compose -f docker-compose.yml down",
     "setup-env": "node ./setup-env.js apps/api/.env.sample apps/api/.env"
   },
   "devDependencies": {
